Upgrades, fixed deprecations and new weather widget