@@ -7,7 +7,7 @@
  */
  buildscript {
    dependencies {
-     classpath "com.google.protobuf:protobuf-gradle-plugin:0.9.2"
+     classpath "com.google.protobuf:protobuf-gradle-plugin:0.9.4"
    }
  }
 plugins {
@@ -19,7 +19,7 @@ plugins {
 
     id "com.github.johnrengelman.shadow" version "8.1.1"
 
-    id "nu.studer.jooq" version "7.1.1"
+    id "nu.studer.jooq" version "8.0"
 
     id 'pmd'
 }
@@ -28,23 +28,27 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     maven {
-        url "https://plugins.gradle.org/m2/"
+        url = "https://plugins.gradle.org/m2/"
     }
     maven {
-        url "https://oss.sonatype.org/content/repositories/snapshots/"
+        url = "https://oss.sonatype.org/content/repositories/snapshots/"
     }
     mavenCentral()
     mavenLocal()
     maven {
-        url "https://maven.cubrid.org/"
+        url = "https://maven.cubrid.org/"
     }
 }
 
-version = "3.3.0"
-sourceCompatibility = "21"
+version = "3.3.1"
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+println("Java Version: " + JavaVersion.current())
 ext {
-    vertxVersion = "4.5.9"
+    vertxVersion = "4.5.12"
     junitJupiterEngineVersion = "5.10.2"
     jooqVersion = "3.19.3"
     protoVersion = "3.23.3"
@@ -84,7 +88,9 @@ dependencies {
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.0.0'
     implementation group: 'cubrid', name: 'cubrid-jdbc', version: '11.2.1.0038'
-    implementation "com.google.firebase:firebase-admin:9.3.0"
+
+    implementation "com.google.firebase:firebase-admin:9.4.1"
+
     implementation group: "org.neo4j.driver", name: "neo4j-java-driver", version: "4.4.18"
     implementation "io.vertx:vertx-mongo-client:$vertxVersion"
     implementation "io.smallrye.reactive:smallrye-mutiny-vertx-core:2.30.1"
@@ -97,20 +103,11 @@ dependencies {
     implementation "com.google.guava:guava:33.2.1-jre"
     implementation project(":handicap")
     implementation "dmo.fs.utils:generate"
-    // implementation "io.vertx:vertx-openapi:$vertxVersion"
 
     implementation "io.vertx:vertx-web-openapi-router:$vertxVersion"
     implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
 
     implementation "io.vertx:vertx-mqtt:$vertxVersion"
-
-//    compileOnly "io.vertx:vertx-web-graphql:$vertxVersion"
-
-    // implementation "io.vertx:vertx-web-validation"
-    // implementation "io.vertx:vertx-web-openapi"
-    // implementation "io.vertx:vertx-auth-webauthn"
-    // implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
-    // compileOnly "io.vertx:vertx-web-openapi-router:$vertxVersion"
 
     implementation group: "jakarta.xml.bind", name: "jakarta.xml.bind-api", version: "4.0.0"
     runtimeOnly group: "com.sun.xml.bind", name: "jaxb-impl", version: "4.0.0"
@@ -138,19 +135,13 @@ apply plugin: "nu.studer.jooq"
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << "-Xlint:deprecation"
-    // exec "gradlew clean run -Pcompiler.prop=-Xlint:unchecked" to display compiler messages
     if(project.hasProperty("compiler.prop")) {
-	options.compilerArgs << project.property("compiler.prop")
+	    options.compilerArgs << project.property("compiler.prop")
     }
-//    options.compilerArgs.add("--enable-preview")
-//    dependsOn processResources
 }
 
 processResources {
-//    def taskName = getGradle().getStartParameter().getTaskNames()[0]
-//    if ("run" == taskName || "jooqGenerate" == taskName) {
-        dependsOn handicap: compileJava
-//    }
+    dependsOn handicap:compileJava
 }
 
 startScripts {
@@ -179,7 +170,6 @@ run {
     args = ['run', mainVerticleName,  debug, "--redeploy=$watchForChange", "--launcher-class=$mainClassName",
     "--on-redeploy=$doOnChange", "--conf=src/main/resources/application-conf.json",
      cache]
-    // systemProperty("java.util.logging.config.file", "src/main/java/vertx-default-jul-logging.properties")
 }
 
 /*
@@ -223,7 +213,7 @@ tasks.register('listServer', Exec) {
 }
 
 jar {
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 shadowJar {
